# MagicSquare_

./: .cursorrules  .gitignore  README.md  pyproject.toml  test_plan.md
.cursor/rules/: magicsquare-ecb-architecture.mdc  magicsquare-forbidden.mdc  magicsquare-project.mdc  magicsquare-python-code-style.mdc  magicsquare-tdd-testing.mdc
Prompting/: 01.cursor_4x4_magic_square_problem_observa-prompt.md  02.cursor_prd_writing_and_pr_review-transcript.md  03.cursor_fr01_test_plan_red_tdd-transcript.md  04.cursor_report_transcript_export-transcript.md  05.cursor_dualtrack_red_skeleton_transcript.md
Report/: 01.MagicSquare-Problem-Definition-Report.md  02.MagicSquare-PRD-Review-Report.md  03.MagicSquare-FR01-TestPlan-Implementation-Report.md  04.MagicSquare-DualTrack-RED-Skeleton-Implementation-Report.md
src/boundary/: __init__.py  errors.py  validator.py
src/control/: __init__.py  magic_square_control.py
tests/: conftest.py
tests/boundary/: test_u_flow_02.py  test_u_in_04_to_08.py  test_u_out_01_to_03.py
tests/entity/: conftest.py  test_d_loc_01.py  test_d_mis_01.py  test_d_sol_01_to_04.py  test_d_val_01_to_06.py
tests/unit/boundary/: test_input_size_validation.py
